# social-impact-analysis

./: .gitignore  CLAUDE.md  README.md  export_to_portfolio.ps1  main.py  pyproject.toml
notebooks/: 01_phase1_foundation.ipynb
